Bug 286690 - nepomukservicestub crash on start up
Summary: nepomukservicestub crash on start up
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: storage (other bugs)
Version First Reported In: 4.7
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
: 286625 286724 286879 287266 289198 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-15 13:38 UTC by Fabian
Modified: 2012-01-30 15:50 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian 2011-11-15 13:38:36 UTC
Application: nepomukservicestub (0.2)
KDE Platform Version: 4.7.3 (4.7.3)
Qt Version: 4.7.4
Operating System: Linux 2.6.37.6-0.9-desktop i686
Distribution: "openSUSE 11.4 (i586)"

-- Information about the crash:
- What I was doing when the application crashed:

Starting KDE. 

Kopete, Kontakt are started by session restore.

No manual interaction.

-- Backtrace:
Application: Nepomuk-Dienst (nepomukservicestub), signal: Segmentation fault
[Current thread is 1 (Thread 0xb55f5710 (LWP 4178))]

Thread 2 (Thread 0xb200fb70 (LWP 4497)):
#0  0xb5fbe22b in clock_gettime () from /lib/librt.so.1
#1  0xb7656345 in do_gettime () at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb77291b6 in updateCurrentTime (this=0x82bee34, tm=...) at kernel/qeventdispatcher_unix.cpp:339
#4  QTimerInfoList::timerWait (this=0x82bee34, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0xb77279fb in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xb200f11c) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb7727a9d in timerSourcePrepare (source=0x82bee00, timeout=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb5f08a70 in g_main_context_prepare () from /lib/libglib-2.0.so.0
#8  0xb5f098e2 in ?? () from /lib/libglib-2.0.so.0
#9  0xb5f09fce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#10 0xb7728247 in QEventDispatcherGlib::processEvents (this=0x835fdf8, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0xb76f8c5d in QEventLoop::processEvents (this=0xb200f2b0, flags=...) at kernel/qeventloop.cpp:149
#12 0xb76f8e89 in QEventLoop::exec (this=0xb200f2b0, flags=...) at kernel/qeventloop.cpp:201
#13 0xb75f9fd9 in QThread::exec (this=0x8358d50) at thread/qthread.cpp:498
#14 0xb76d89ed in QInotifyFileSystemWatcherEngine::run (this=0x8358d50) at io/qfilesystemwatcher_inotify.cpp:248
#15 0xb75fcc23 in QThreadPrivate::start (arg=0x8358d50) at thread/qthread_unix.cpp:331
#16 0xb7580b05 in start_thread () from /lib/libpthread.so.0
#17 0xb60bad1e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb55f5710 (LWP 4178)):
[KCrash Handler]
#7  0xb589f06f in Soprano::FilterModel::executeQuery (this=0x81ad190, query=..., language=3214597940, userQueryLanguage=...) at /usr/src/debug/soprano-2.7.3/soprano/filtermodel.cpp:164
#8  0xb589f08f in Soprano::FilterModel::executeQuery (this=0x8338518, query=..., language=3214597940, userQueryLanguage=...) at /usr/src/debug/soprano-2.7.3/soprano/filtermodel.cpp:164
#9  0xb589f08f in Soprano::FilterModel::executeQuery (this=0x836d590, query=..., language=3214597940, userQueryLanguage=...) at /usr/src/debug/soprano-2.7.3/soprano/filtermodel.cpp:164
#10 0xb3bceb4b in Nepomuk::OntologyManagerModel::ontoModificationDate (this=0x836d590, uri=...) at /usr/src/debug/kde-runtime-4.7.3/nepomuk/services/storage/ontologymanagermodel.cpp:414
#11 0xb3bcc688 in Nepomuk::OntologyLoader::Private::updateOntology (this=0x831e798, filename=...) at /usr/src/debug/kde-runtime-4.7.3/nepomuk/services/storage/ontologyloader.cpp:96
#12 0xb3bcd935 in Nepomuk::OntologyLoader::updateNextOntology (this=0x835f6d0) at /usr/src/debug/kde-runtime-4.7.3/nepomuk/services/storage/ontologyloader.cpp:199
#13 0xb3bcda78 in Nepomuk::OntologyLoader::qt_metacall (this=0x835f6d0, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0xbf9ae21c) at /usr/src/debug/kde-runtime-4.7.3/build/nepomuk/services/storage/ontologyloader.moc:98
#14 0xb770026d in QMetaObject::metacall (object=0x835f6d0, cl=QMetaObject::InvokeMetaMethod, idx=11, argv=0xbf9ae21c) at kernel/qmetaobject.cpp:237
#15 0xb770f79c in QMetaObject::activate (sender=0x831e79c, m=0xb78345a4, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3287
#16 0xb775f935 in QTimer::timeout (this=0x831e79c) at .moc/release-shared/moc_qtimer.cpp:134
#17 0xb7716b26 in QTimer::timerEvent (this=0x831e79c, e=0xbf9ae75c) at kernel/qtimer.cpp:271
#18 0xb770eed4 in QObject::event (this=0x831e79c, e=0xbf9ae75c) at kernel/qobject.cpp:1190
#19 0xb63845c4 in QApplicationPrivate::notify_helper (this=0x806b5f8, receiver=0x831e79c, e=0xbf9ae75c) at kernel/qapplication.cpp:4481
#20 0xb638d367 in QApplication::notify (this=0xbf9afa28, receiver=0x831e79c, e=0xbf9ae75c) at kernel/qapplication.cpp:3881
#21 0xb6fd5b41 in KApplication::notify (this=0xbf9afa28, receiver=0x831e79c, event=0xbf9ae75c) at /usr/src/debug/kdelibs-4.7.3/kdeui/kernel/kapplication.cpp:311
#22 0xb76f997e in QCoreApplication::notifyInternal (this=0xbf9afa28, receiver=0x831e79c, event=0xbf9ae75c) at kernel/qcoreapplication.cpp:787
#23 0xb772ae09 in sendEvent (this=0x806de34) at kernel/qcoreapplication.h:215
#24 QTimerInfoList::activateTimers (this=0x806de34) at kernel/qeventdispatcher_unix.cpp:618
#25 0xb7727ad2 in timerSourceDispatch (source=0x806de00) at kernel/qeventdispatcher_glib.cpp:184
#26 0xb5f09509 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#27 0xb5f09d10 in ?? () from /lib/libglib-2.0.so.0
#28 0xb5f09fce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#29 0xb77281fb in QEventDispatcherGlib::processEvents (this=0x8053f38, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#30 0xb643b89a in QGuiEventDispatcherGlib::processEvents (this=0x8053f38, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#31 0xb76f8c5d in QEventLoop::processEvents (this=0xbf9aea54, flags=...) at kernel/qeventloop.cpp:149
#32 0xb76f8e89 in QEventLoop::exec (this=0xbf9aea54, flags=...) at kernel/qeventloop.cpp:201
#33 0xb3196c25 in waitForVirtuosoToInitialize (this=0x8349268, settings=..., flags=) at /usr/src/debug/soprano-2.7.3/backends/virtuoso/virtuosocontroller.cpp:196
#34 Soprano::VirtuosoController::start (this=0x8349268, settings=..., flags=) at /usr/src/debug/soprano-2.7.3/backends/virtuoso/virtuosocontroller.cpp:177
#35 0xb319093b in Soprano::Virtuoso::BackendPlugin::createModel (this=0x80e4650, settings=...) at /usr/src/debug/soprano-2.7.3/backends/virtuoso/virtuosobackend.cpp:72
#36 0xb3bc9e61 in Nepomuk::Repository::open (this=0x81ad190) at /usr/src/debug/kde-runtime-4.7.3/nepomuk/services/storage/repository.cpp:187
#37 0xb3bcb410 in Nepomuk::Repository::slotVirtuosoStopped (this=0x81ad190, normalExit=false) at /usr/src/debug/kde-runtime-4.7.3/nepomuk/services/storage/repository.cpp:441
#38 0xb3bcb7e6 in Nepomuk::Repository::qt_metacall (this=0x81ad190, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbf9af0d4) at /usr/src/debug/kde-runtime-4.7.3/build/nepomuk/services/storage/repository.moc:89
#39 0xb770026d in QMetaObject::metacall (object=0x81ad190, cl=QMetaObject::InvokeMetaMethod, idx=17, argv=0xbf9af0d4) at kernel/qmetaobject.cpp:237
#40 0xb770f79c in QMetaObject::activate (sender=0x82b7728, m=0xb31afae0, local_signal_index=0, argv=0xbf9af0d4) at kernel/qobject.cpp:3287
#41 0xb318c322 in virtuosoStopped (this=0x82b7728, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x8222960) at /usr/src/debug/soprano-2.7.3/build/backends/virtuoso/virtuosomodel.moc:90
#42 Soprano::VirtuosoModel::qt_metacall (this=0x82b7728, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x8222960) at /usr/src/debug/soprano-2.7.3/build/backends/virtuoso/virtuosomodel.moc:77
#43 0xb770026d in QMetaObject::metacall (object=0x82b7728, cl=QMetaObject::InvokeMetaMethod, idx=8, argv=0x8222960) at kernel/qmetaobject.cpp:237
#44 0xb770ae15 in QMetaCallEvent::placeMetaCall (this=0x81234e8, object=0x82b7728) at kernel/qobject.cpp:535
#45 0xb770f08f in QObject::event (this=0x82b7728, e=0x81234e8) at kernel/qobject.cpp:1226
#46 0xb63845c4 in QApplicationPrivate::notify_helper (this=0x806b5f8, receiver=0x82b7728, e=0x81234e8) at kernel/qapplication.cpp:4481
#47 0xb638d367 in QApplication::notify (this=0xbf9afa28, receiver=0x82b7728, e=0x81234e8) at kernel/qapplication.cpp:3881
#48 0xb6fd5b41 in KApplication::notify (this=0xbf9afa28, receiver=0x82b7728, event=0x81234e8) at /usr/src/debug/kdelibs-4.7.3/kdeui/kernel/kapplication.cpp:311
#49 0xb76f997e in QCoreApplication::notifyInternal (this=0xbf9afa28, receiver=0x82b7728, event=0x81234e8) at kernel/qcoreapplication.cpp:787
#50 0xb76fd70c in sendEvent (receiver=0x0, event_type=0, data=0x80541b8) at kernel/qcoreapplication.h:215
#51 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x80541b8) at kernel/qcoreapplication.cpp:1428
#52 0xb76fd85c in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1321
#53 0xb7728074 in sendPostedEvents (s=0x806c980) at kernel/qcoreapplication.h:220
#54 postEventSourceDispatch (s=0x806c980) at kernel/qeventdispatcher_glib.cpp:277
#55 0xb5f09509 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#56 0xb5f09d10 in ?? () from /lib/libglib-2.0.so.0
#57 0xb5f09fce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#58 0xb77281fb in QEventDispatcherGlib::processEvents (this=0x8053f38, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#59 0xb643b89a in QGuiEventDispatcherGlib::processEvents (this=0x8053f38, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#60 0xb76f8c5d in QEventLoop::processEvents (this=0xbf9af884, flags=...) at kernel/qeventloop.cpp:149
#61 0xb76f8e89 in QEventLoop::exec (this=0xbf9af884, flags=...) at kernel/qeventloop.cpp:201
#62 0xb76fd930 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#63 0xb6382314 in QApplication::exec () at kernel/qapplication.cpp:3755
#64 0x0804b4d4 in main (argc=-1216129908, argv=0x8342850) at /usr/src/debug/kde-runtime-4.7.3/nepomuk/servicestub/main.cpp:170

Reported using DrKonqi
Comment 1 Fabian 2011-11-15 13:51:06 UTC
Deleting $KDEHOME/share/apps/nepomuk solves this problem.
Comment 2 Sebastian Trueg 2011-11-16 14:40:33 UTC
*** Bug 286625 has been marked as a duplicate of this bug. ***
Comment 3 Sebastian Trueg 2011-11-16 14:41:39 UTC
*** Bug 286724 has been marked as a duplicate of this bug. ***
Comment 4 Sebastian Trueg 2011-11-16 16:47:50 UTC
Git commit f0378353550c6dc52039f44d63962894de58b062 by Sebastian Trueg.
Committed on 16/11/2011 at 17:15.
Pushed by trueg into branch 'KDE/4.7'.

Delete the OntologyLoader once the repository goes down.

This is required to make sure the ontology loader does not try to use
the repository while it is being re-opened and thus, does not work
(even asserts on queries).
BUG: 286690
FIXED-IN: 4.7.4

M  +14   -4    nepomuk/services/storage/nepomukcore.cpp
M  +5    -0    nepomuk/services/storage/nepomukcore.h
M  +4    -0    nepomuk/services/storage/repository.cpp
M  +1    -0    nepomuk/services/storage/repository.h

http://commits.kde.org/kde-runtime/f0378353550c6dc52039f44d63962894de58b062
Comment 5 Sebastian Trueg 2011-11-16 16:48:07 UTC
Git commit ea7e5949ecd74121053c45b310d4269c024a6332 by Sebastian Trueg.
Committed on 16/11/2011 at 17:15.
Pushed by trueg into branch 'master'.

Delete the OntologyLoader once the repository goes down.

This is required to make sure the ontology loader does not try to use
the repository while it is being re-opened and thus, does not work
(even asserts on queries).
BUG: 286690
FIXED-IN: 4.7.4

M  +14   -4    nepomuk/services/storage/nepomukcore.cpp
M  +5    -0    nepomuk/services/storage/nepomukcore.h
M  +4    -0    nepomuk/services/storage/repository.cpp
M  +1    -0    nepomuk/services/storage/repository.h

http://commits.kde.org/kde-runtime/ea7e5949ecd74121053c45b310d4269c024a6332
Comment 6 Sebastian Trueg 2011-11-16 16:48:56 UTC
Git commit bcc63fc6ffad78e22864d4ae6d14a898c49d6f49 by Sebastian Trueg.
Committed on 16/11/2011 at 17:05.
Pushed by trueg into branch 'master'.

Delete the OntologyLoader once the repository goes down.

This is required to make sure the ontology loader does not try to use
the repository while it is being re-opened and thus, does not work
(even asserts on queries).
BUG: 286690
FIXED-IN: 4.7.4

M  +14   -4    services/storage/nepomukcore.cpp
M  +5    -0    services/storage/nepomukcore.h
M  +4    -0    services/storage/repository.cpp
M  +1    -0    services/storage/repository.h

http://commits.kde.org/nepomuk-core/bcc63fc6ffad78e22864d4ae6d14a898c49d6f49
Comment 7 Sebastian Trueg 2011-11-16 16:49:28 UTC
Git commit 4c045bfdc856726ee8e87c4e6541a3d473adec09 by Sebastian Trueg.
Committed on 16/11/2011 at 17:42.
Pushed by trueg into branch '2.7'.

Do not use an event loop to wait for Virtuoso to start.

This means events are not handled during model creation which is another
fix for a Nepomuk crash.
CCBUG: 286690

M  +1    -0    ChangeLog
M  +12   -24   backends/virtuoso/virtuosocontroller.cpp
M  +0    -3    backends/virtuoso/virtuosocontroller.h

http://commits.kde.org/soprano/4c045bfdc856726ee8e87c4e6541a3d473adec09
Comment 8 Sebastian Trueg 2011-11-18 08:28:03 UTC
*** Bug 286879 has been marked as a duplicate of this bug. ***
Comment 9 Sebastian Trueg 2011-11-23 10:12:31 UTC
*** Bug 287266 has been marked as a duplicate of this bug. ***
Comment 10 Sebastian Trueg 2011-12-06 16:05:30 UTC
Git commit e3f56fd2029fe206ee09fe876cb70fca5c6021a8 by Sebastian Trueg.
Committed on 16/11/2011 at 17:05.
Pushed by trueg into branch 'symlinkHandling'.

Delete the OntologyLoader once the repository goes down.

This is required to make sure the ontology loader does not try to use
the repository while it is being re-opened and thus, does not work
(even asserts on queries).
BUG: 286690
FIXED-IN: 4.7.4

M  +14   -4    services/storage/nepomukcore.cpp
M  +5    -0    services/storage/nepomukcore.h
M  +4    -0    services/storage/repository.cpp
M  +1    -0    services/storage/repository.h

http://commits.kde.org/nepomuk-core/e3f56fd2029fe206ee09fe876cb70fca5c6021a8
Comment 11 Sebastian Trueg 2012-01-30 15:50:45 UTC
*** Bug 289198 has been marked as a duplicate of this bug. ***