Delete the OntologyLoader once the repository goes down.

This is required to make sure the ontology loader does not try to use
the repository while it is being re-opened and thus, does not work
(even asserts on queries).
BUG: 286690
FIXED-IN: 4.7.4